--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ body,html {
 #middle {
     width:100%;
     height:80vh;
-    background:linear-gradient(0deg,rgba(0,0,0,1),rgba(0,0,0,0)),url("https://images.unsplash.com/photo-1494587351196-bbf5f29cff42?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&&w=1351&q=80") center center fixed;
+    background:linear-gradient(0deg,rgba(0,0,0,1),rgba(0,0,0,0)),url("https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/a25c3869-9dab-4fab-bc27-239ce00c0850/dcgvuv7-d8512a5c-3319-4aff-a8d7-1788700abd43.jpg/v1/fill/w_1136,h_703,q_70,strp/contemplating_by_tomtc_dcgvuv7-pre.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3siaGVpZ2h0IjoiPD05OTEiLCJwYXRoIjoiXC9mXC9hMjVjMzg2OS05ZGFiLTRmYWItYmMyNy0yMzljZTAwYzA4NTBcL2RjZ3Z1djctZDg1MTJhNWMtMzMxOS00YWZmLWE4ZDctMTc4ODcwMGFiZDQzLmpwZyIsIndpZHRoIjoiPD0xNjAwIn1dXSwiYXVkIjpbInVybjpzZXJ2aWNlOmltYWdlLm9wZXJhdGlvbnMiXX0.GMCwmmW8xdr_3ZqvvwUhyiDGQQHPnNc-73E9ZKyVmfM") center center fixed;
     background-size:100% auto;
     background-repeat:no-repeat;
     color:white;
